--- a/package.json
+++ b/package.json
@@ -5,21 +5,36 @@
   "homepage": "https://alibaba.github.io/ice/scaffold-preview/ice-design-lite.html",
   "dependencies": {
     "@icedesign/base": "^0.2.0",
-    "@icedesign/container": "^0.1.2",
+    "@icedesign/container": "^0.1.0",
+    "@icedesign/data-binder": "^0.1.1",
+    "@icedesign/form-binder": "^0.1.2",
     "@icedesign/img": "^0.1.1",
+    "@icedesign/label": "^0.1.0",
     "@icedesign/layout": "^0.1.1",
     "@icedesign/menu": "^0.1.1",
     "@icedesign/skin": "^0.1.0",
     "@icedesign/styled-menu": "^0.1.1",
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "bizcharts": "latest",
     "classnames": "^2.2.5",
     "enquire-js": "^0.1.2",
     "foundation-symbol": "^0.1.0",
+    "immutable": "^3.8.2",
+    "is-hotkey": "^0.1.1",
+    "js-base64": "^2.4.5",
+    "moment": "^2.22.2",
+    "nebpay": "0.0.5",
+    "nebulas": "^0.5.0",
     "prop-types": "^15.5.8",
+    "qrcode.react": "^0.8.0",
+    "react": "^16.2.0",
     "react-document-title": "^2.0.3",
+    "react-markdown": "^3.3.2",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "slate": "^0.32.1",
+    "slate-plain-serializer": "^0.5.1",
+    "slate-react": "^0.11.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
